<resources>
    <string name="app_name">OrderApp</string>
    <string name="menu_and_pickers">Menu and Pickers</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="contact">Contact</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="error_message">Something went wrong</string>


    <string name="loreText">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
        industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="alert">Alert</string>
    <string name="picker">Picker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_picker">Time picker</string>


</resources>