<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/alert_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="onClickShowAlert"
                android:layout_gravity="center"
                android:text="@string/alert" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/picker_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="onClickShowDatePicker"
                android:layout_gravity="center"
                android:text="@string/picker" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="20dp"
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="onClickShowTimePicker"
                android:layout_gravity="center"
                android:text="@string/time_picker" />


        </LinearLayout>




    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>